knative/custom-domain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
  labels:
    name: helloworld
