knative/secret-store-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-secrets-store-inline
  namespace: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-secrets-store-inline
  template:
    metadata:
      labels:
        app: nginx-secrets-store-inline
    spec:
      serviceAccountName: schema-registry-service-account
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: rds-password
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: rds-password
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "aws-secrets"
