knative/custom-domai-ecr-image.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: hello-world
#   labels:
#     name: hello-world
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello-abc
  namespace: hello-world
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "1"
    spec:
      containers:
        - image: "593546282661.dkr.ecr.us-east-1.amazonaws.com/ngnix-knative:1.2.1"
          ports:
            - containerPort: 80
          name: abc
          envFrom:
            - secretRef:
                name: secret-to-be-created
          env:
            - name: SERVICE
              value: "http://syncron.com"
      imagePullSecrets:
        - name: ecr-registry-secret
