knative/custome-domain-secret.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
  labels:
    name: helloworld
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  namespace: helloworld
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "1"
    spec:
      containers:
      - image: stacksimplify/kubenginx:1.0.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: rds-password
          mountPath: "/mnt/secrets-store"
          readOnly: true
      serviceAccountName: schema-registry-service-account
      volumes:
      - name: rds-password
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "aws-secrets"
