knative/hello-service.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: helloworld
#   labels:
#     name: helloworld

---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  namespace: helloworld
spec:
  template:
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
          ports:
            - containerPort: 8080
          env:
            - name: TARGET
              value: "World"
