knative/istio-annotation.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "null"
    alb.ingress.kubernetes.io/healthcheck-port: "30960"
    meta.helm.sh/release-name: istio-ingressgateway
    meta.helm.sh/release-namespace: istio-system
  creationTimestamp: "2024-08-11T16:31:58Z"
  finalizers:
  - service.k8s.aws/resources
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/version: 1.22.0
    helm.sh/chart: gateway-1.22.0
    istio: ingressgateway
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "11032"
  uid: ff3e9a66-e944-450f-86f6-972417066c39
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.100.163.200
  clusterIPs:
  - 10.100.163.200
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerClass: service.k8s.aws/nlb
  ports:
  - name: status-port
    nodePort: 30960
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 32532
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 31190
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: k8s-istiosys-istioing-506b88fcfc-41edac992db8b1ba.elb.us-east-1.amazonaws.com
