knative/qa-hello-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa-api
  labels:
    name: qa-api

---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  namespace: qa-api
spec:
  template:
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
          ports:
            - containerPort: 8080
          env:
            - name: TARGET
              value: "World"
