knative/v2-custom-domain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    name: hello-world
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: hello
  namespace: hello-world
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/min-scale: "1"
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go
          ports:
            - containerPort: 8080
