knative/ingress-ngnix.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-ingress
#   namespace: hello-world
#   labels:
#     app: hello-world
#   annotations:
#     # Load Balancer Name
#     alb.ingress.kubernetes.io/load-balancer-name: ingress-basics
#     #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource) # Additional Notes: https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.3/guide/ingress/ingress_class/#deprecated-kubernetesioingressclass-annotation
#     # Ingress Core Settings
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     # Health Check Settings
#     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
#     alb.ingress.kubernetes.io/healthcheck-port: traffic-port
#     alb.ingress.kubernetes.io/healthcheck-path: /index.html    
#     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
#     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
#     alb.ingress.kubernetes.io/success-codes: '200'
#     alb.ingress.kubernetes.io/healthy-threshold-count: '2'
#     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
# spec:
#   ingressClassName: my-aws-ingress-class # Ingress Class
#   defaultBackend:
#     service:
#       name: istio-ingressgateway
#       port:
#         number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: test-alb
#   namespace: istio-system
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/backend-protocol: HTTP
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
#     alb.ingress.kubernetes.io/healthcheck-path: /
#     alb.ingress.kubernetes.io/healthcheck-port: "80"
# spec:
#   rules:
#   - http:
#       paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: istio-ingressgateway
#               port:
#                 number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 15021
        path: /healthz/ready
        pathType: Prefix
      - backend:
          service:
            name: istio-ingressgateway
            port:
              number: 80
        path: /
        pathType: Prefix
